*played with admin

--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
   <input class = "form-control" idartTitle="text" name="" value="article default">
   <br>
 
-  <h2> Choose an Image</h2>
+  <h2> Choose an Images</h2>
   <input type="file" id="file">
   <br>
   <br>
